ticket #428 - stopping text cropping on collection listing

--- a/frontend/scss/molecules/_m-listing.scss
+++ b/frontend/scss/molecules/_m-listing.scss
@@ -431,6 +431,8 @@
     @include tucked-margin-top($f-tertiary, ('xsmall': 20, 'small+': 28));
 
     @include breakpoint('xsmall') {
+      padding-bottom: 2px;
+      margin-bottom: -2px; // to not crop text
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
